--- a/基础泰语一次册第十一课词汇.md
+++ b/基础泰语一次册第十一课词汇.md
@@ -1,98 +1,193 @@
-| **泰语**                            | **英语**                               |
-|--------------------------------------|----------------------------------------|
-| ตัวเลข                               | Number, digit                         |
-| วิธี                                 | Method, way                           |
-| ดังนี้                               | As follows                            |
-| หน่วย                               | Unit                                  |
-| สิบ                                  | Ten                                   |
-| ร้อย                                 | Hundred                               |
-| พัน                                  | Thousand                              |
-| หมื่น                                | Ten thousand                          |
-| แสน                                 | Hundred thousand                      |
-| ล้าน                                 | Million                               |
-| เอ็ด                                  | One (used in 21, 31, etc.)           |
-| เศษส่วน                              | Fraction                              |
-| เศษส่วนทศนิยม                        | Decimal fraction                      |
-| ศูนย์                                | Zero                                  |
-| จุด                                  | Point, dot, decimal point            |
-| ร้อยละ                               | Percentage                            |
-| ห้าร้อยละ                            | Five hundred percent (500%)           |
-| เปอร์เซ็นต์                           | Percent (%)                           |
-| คณะ                                 | Faculty, department, committee       |
-| คณะกรรมการ                           | Committee                             |
-| คณะผู้แทน                            | Delegation, representatives          |
-| เอเชีย / เอเซีย                      | Asia                                  |
-| แอฟริกา                              | Africa                                |
-| กัมพูชา                              | Cambodia                              |
-| เวียดนาม                             | Vietnam                               |
-| มาเลเซีย                             | Malaysia                              |
-| อินโดนีเซีย / อินโดเนเซีย             | Indonesia                             |
-| ภาษาสิงหล                            | Sinhala language                      |
-| ภาษาสวาฮีลี                          | Swahili language                      |
-| ภาษาฮาวซา                            | Hausa language                        |
-| ตุรกี                                | Turkey                                |
-| รวม                                  | Include, total                        |
-| ทั้ง                                  | Both, entire                          |
-| ทั้งหมด                               | All, total                            |
-| เท่าไร                               | How much, how many                    |
-| แบ่ง                                 | Divide                                |
-| แบ่งออกเป็น                           | Divided into                          |
-| วิทยาลัย                             | College                               |
-| อาหรับ                               | Arabic                                |
-| ยุโรป                                | Europe                                |
-| คณะภาษายุโรปตะวันออก                 | Faculty of Eastern European Languages |
-| วิทยาลัยภาษาอังกฤษ                    | College of English Language           |
-| วิทยาลัยภาษารัสเซีย                   | College of Russian Language           |
-| วัฒนธรรม                             | Culture                               |
-| วัฒนธรรมจีน                          | Chinese culture                       |
-| วิทยาลัยภาษาและวัฒนธรรมจีน            | College of Chinese Language and Culture |
-| การค้า                               | Trade, commerce                       |
-| ระหว่าง                              | Between                               |
-| การค้าระหว่างประเทศ                  | International trade                   |
-| วิทยาลัยการค้าระหว่างประเทศ          | College of International Trade        |
-| ชั้นสูง                               | Advanced, higher                      |
-| การแปล                               | Translation                           |
-| วิทยาลัยการแปลชั้นสูง                | College of Advanced Translation       |
-| วิทยาลัยออนไลน์                       | Online college                        |
-| ประมาณ                               | Approximately                         |
-| กว่า                                 | More than, over                       |
-| ชาว                                 | People of (nationality, ethnicity)    |
-| ต่างประเทศ                           | Foreign, abroad                       |
-| ถ้า                                  | If                                    |
-| รวมทั้ง                               | Including                             |
-| เจ้าหน้าที่                           | Official, staff                       |
-| อื่นๆ                                 | Others                                |
-| คง                                  | Probably, likely                      |
-| อยาก                                | Want, wish                            |
-| สถา                                 | Institution, place (abbreviation)     |
-| สถานี                               | Station                               |
-| สถาบัน                              | Institute                             |
-| การศึกษา                            | Education                             |
-| สถาบันการศึกษา                      | Educational institution               |
-| อุดม                                | Supreme, abundant                     |
-| อุดมศึกษา                           | Higher education                      |
-| สถาบันอุดมศึกษา                     | Higher education institution          |
-| แห่ง                                | Place, location, classifier for institutions |
-| แน่นอน                              | Certainly, definitely                 |
-| เท่าที่                              | As much as, as far as                 |
-| ซี                                  | C (Latin letter)                      |
-| เช่นนั้น                             | Like that, in such a way              |
-| เฉพาะ...ก็...                        | Only...also...                        |
-| ผู้                                  | Person, classifier for people         |
-| สมัคร                               | Apply, register                       |
-| สอบ                                 | Exam, test                            |
-| สอบเข้าได้                           | Pass an entrance exam                 |
-| สมัครสอบเข้ามหาวิทยาลัย              | Apply for a university entrance exam  |
-| ชั้นบันได                            | Staircase, stairs                     |
-| ไฟล์                                | File (digital or document)            |
-| ล็อบบี้                              | Lobby                                 |
-| พลัง                                | Power, energy                         |
-| ข้อมูล                               | Information, data                     |
-| ไว้ใจ                               | Trust                                 |
-| นาน                                 | Long (time duration)                  |
-| นิด                                 | A little, slightly                    |
-| การเงิน                              | Finance                               |
-| การทหาร                             | Military affairs                      |
-| การต่างประเทศ                        | Foreign affairs                       |
-| ความลับ                             | Secret, confidentiality               |
-| แฮมเบอร์เกอร์                        | Hamburger                             |
+ตัวเลข	-	ตัวเลข	-	Number, digit	-	ตัวเลข	-	ตัวเลข	-	ตัวเลข	-	ตัวเลข	-	ตัวเลข	-	ตัวเลข	-	Number, digit
+
+วิธี	-	วิธี	-	Method, way	-	วิธี	-	วิธี	-	วิธี	-	วิธี	-	วิธี	-	วิธี	-	Method, way
+
+ดังนี้	-	ดังนี้	-	As follows	-	ดังนี้	-	ดังนี้	-	ดังนี้	-	ดังนี้	-	ดังนี้	-	ดังนี้	-	As follows
+
+หน่วย	-	หน่วย	-	Unit	-	หน่วย	-	หน่วย	-	หน่วย	-	หน่วย	-	หน่วย	-	หน่วย	-	Unit
+
+สิบ	-	สิบ	-	Ten	-	สิบ	-	สิบ	-	สิบ	-	สิบ	-	สิบ	-	สิบ	-	Ten
+
+ร้อย	-	ร้อย	-	Hundred	-	ร้อย	-	ร้อย	-	ร้อย	-	ร้อย	-	ร้อย	-	ร้อย	-	Hundred
+
+พัน	-	พัน	-	Thousand	-	พัน	-	พัน	-	พัน	-	พัน	-	พัน	-	พัน	-	Thousand
+
+หมื่น	-	หมื่น	-	Ten thousand	-	หมื่น	-	หมื่น	-	หมื่น	-	หมื่น	-	หมื่น	-	หมื่น	-	Ten thousand
+
+แสน	-	แสน	-	Hundred thousand	-	แสน	-	แสน	-	แสน	-	แสน	-	แสน	-	แสน	-	Hundred thousand
+
+ล้าน	-	ล้าน	-	Million	-	ล้าน	-	ล้าน	-	ล้าน	-	ล้าน	-	ล้าน	-	ล้าน	-	Million
+
+เอ็ด	-	เอ็ด	-	One (used in 21, 31, etc.)	-	เอ็ด	-	เอ็ด	-	เอ็ด	-	เอ็ด	-	เอ็ด	-	เอ็ด	-	One (used in 21, 31, etc.)
+
+เศษส่วน	-	เศษส่วน	-	Fraction	-	เศษส่วน	-	เศษส่วน	-	เศษส่วน	-	เศษส่วน	-	เศษส่วน	-	เศษส่วน	-	Fraction
+
+เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	Decimal fraction	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	เศษส่วนทศนิยม	-	Decimal fraction
+
+ศูนย์	-	ศูนย์	-	Zero	-	ศูนย์	-	ศูนย์	-	ศูนย์	-	ศูนย์	-	ศูนย์	-	ศูนย์	-	Zero
+
+จุด	-	จุด	-	Point, dot, decimal point	-	จุด	-	จุด	-	จุด	-	จุด	-	จุด	-	จุด	-	Point, dot, decimal point
+
+ร้อยละ	-	ร้อยละ	-	Percentage	-	ร้อยละ	-	ร้อยละ	-	ร้อยละ	-	ร้อยละ	-	ร้อยละ	-	ร้อยละ	-	Percentage
+
+ห้าร้อยละ	-	ห้าร้อยละ	-	Five hundred percent (500%)	-	ห้าร้อยละ	-	ห้าร้อยละ	-	ห้าร้อยละ	-	ห้าร้อยละ	-	ห้าร้อยละ	-	ห้าร้อยละ	-	Five hundred percent (500%)
+
+เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	Percent (%)	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	เปอร์เซ็นต์	-	Percent (%)
+
+คณะ	-	คณะ	-	Faculty, department, committee	-	คณะ	-	คณะ	-	คณะ	-	คณะ	-	คณะ	-	คณะ	-	Faculty, department, committee
+
+คณะกรรมการ	-	คณะกรรมการ	-	Committee	-	คณะกรรมการ	-	คณะกรรมการ	-	คณะกรรมการ	-	คณะกรรมการ	-	คณะกรรมการ	-	คณะกรรมการ	-	Committee
+
+คณะผู้แทน	-	คณะผู้แทน	-	Delegation, representatives	-	คณะผู้แทน	-	คณะผู้แทน	-	คณะผู้แทน	-	คณะผู้แทน	-	คณะผู้แทน	-	คณะผู้แทน	-	Delegation, representatives
+
+เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	Asia	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	เอเชีย / เอเซีย	-	Asia
+
+แอฟริกา	-	แอฟริกา	-	Africa	-	แอฟริกา	-	แอฟริกา	-	แอฟริกา	-	แอฟริกา	-	แอฟริกา	-	แอฟริกา	-	Africa
+
+กัมพูชา	-	กัมพูชา	-	Cambodia	-	กัมพูชา	-	กัมพูชา	-	กัมพูชา	-	กัมพูชา	-	กัมพูชา	-	กัมพูชา	-	Cambodia
+
+เวียดนาม	-	เวียดนาม	-	Vietnam	-	เวียดนาม	-	เวียดนาม	-	เวียดนาม	-	เวียดนาม	-	เวียดนาม	-	เวียดนาม	-	Vietnam
+
+มาเลเซีย	-	มาเลเซีย	-	Malaysia	-	มาเลเซีย	-	มาเลเซีย	-	มาเลเซีย	-	มาเลเซีย	-	มาเลเซีย	-	มาเลเซีย	-	Malaysia
+
+อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	Indonesia	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	อินโดนีเซีย / อินโดเนเซีย	-	Indonesia
+
+ภาษาสิงหล	-	ภาษาสิงหล	-	Sinhala language	-	ภาษาสิงหล	-	ภาษาสิงหล	-	ภาษาสิงหล	-	ภาษาสิงหล	-	ภาษาสิงหล	-	ภาษาสิงหล	-	Sinhala language
+
+ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	Swahili language	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	ภาษาสวาฮีลี	-	Swahili language
+
+ภาษาฮาวซา	-	ภาษาฮาวซา	-	Hausa language	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	ภาษาฮาวซา	-	Hausa language
+
+ตุรกี	-	ตุรกี	-	Turkey	-	ตุรกี	-	ตุรกี	-	ตุรกี	-	ตุรกี	-	ตุรกี	-	ตุรกี	-	Turkey
+
+รวม	-	รวม	-	Include, total	-	รวม	-	รวม	-	รวม	-	รวม	-	รวม	-	รวม	-	Include, total
+
+ทั้ง	-	ทั้ง	-	Both, entire	-	ทั้ง	-	ทั้ง	-	ทั้ง	-	ทั้ง	-	ทั้ง	-	ทั้ง	-	Both, entire
+
+ทั้งหมด	-	ทั้งหมด	-	All, total	-	ทั้งหมด	-	ทั้งหมด	-	ทั้งหมด	-	ทั้งหมด	-	ทั้งหมด	-	ทั้งหมด	-	All, total
+
+เท่าไร	-	เท่าไร	-	How much, how many	-	เท่าไร	-	เท่าไร	-	เท่าไร	-	เท่าไร	-	เท่าไร	-	เท่าไร	-	How much, how many
+
+แบ่ง	-	แบ่ง	-	Divide	-	แบ่ง	-	แบ่ง	-	แบ่ง	-	แบ่ง	-	แบ่ง	-	แบ่ง	-	Divide
+
+แบ่งออกเป็น	-	แบ่งออกเป็น	-	Divided into	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	แบ่งออกเป็น	-	Divided into
+
+วิทยาลัย	-	วิทยาลัย	-	College	-	วิทยาลัย	-	วิทยาลัย	-	วิทยาลัย	-	วิทยาลัย	-	วิทยาลัย	-	วิทยาลัย	-	College
+
+อาหรับ	-	อาหรับ	-	Arabic	-	อาหรับ	-	อาหรับ	-	อาหรับ	-	อาหรับ	-	อาหรับ	-	อาหรับ	-	Arabic
+
+ยุโรป	-	ยุโรป	-	Europe	-	ยุโรป	-	ยุโรป	-	ยุโรป	-	ยุโรป	-	ยุโรป	-	ยุโรป	-	Europe
+
+คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	Faculty of Eastern European Languages	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	คณะภาษายุโรปตะวันออก	-	Faculty of Eastern European Languages
+
+วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	College of English Language	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	วิทยาลัยภาษาอังกฤษ	-	College of English Language
+
+วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	College of Russian Language	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	วิทยาลัยภาษารัสเซีย	-	College of Russian Language
+
+วัฒนธรรม	-	วัฒนธรรม	-	Culture	-	วัฒนธรรม	-	วัฒนธรรม	-	วัฒนธรรม	-	วัฒนธรรม	-	วัฒนธรรม	-	วัฒนธรรม	-	Culture
+
+วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	Chinese culture	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	วัฒนธรรมจีน	-	Chinese culture
+
+วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	College of Chinese Language and Culture	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	วิทยาลัยภาษาและวัฒนธรรมจีน	-	College of Chinese Language and Culture
+
+การค้า	-	การค้า	-	Trade, commerce	-	การค้า	-	การค้า	-	การค้า	-	การค้า	-	การค้า	-	การค้า	-	Trade, commerce
+
+ระหว่าง	-	ระหว่าง	-	Between	-	ระหว่าง	-	ระหว่าง	-	ระหว่าง	-	ระหว่าง	-	ระหว่าง	-	ระหว่าง	-	Between
+
+การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	International trade	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	การค้าระหว่างประเทศ	-	International trade
+
+วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	College of International Trade	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	วิทยาลัยการค้าระหว่างประเทศ	-	College of International Trade
+
+ชั้นสูง	-	ชั้นสูง	-	Advanced, higher	-	ชั้นสูง	-	ชั้นสูง	-	ชั้นสูง	-	ชั้นสูง	-	ชั้นสูง	-	ชั้นสูง	-	Advanced, higher
+
+การแปล	-	การแปล	-	Translation	-	การแปล	-	การแปล	-	การแปล	-	การแปล	-	การแปล	-	การแปล	-	Translation
+
+วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	College of Advanced Translation	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	วิทยาลัยการแปลชั้นสูง	-	College of Advanced Translation
+
+วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	Online college	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	วิทยาลัยออนไลน์	-	Online college
+
+ประมาณ	-	ประมาณ	-	Approximately	-	ประมาณ	-	ประมาณ	-	ประมาณ	-	ประมาณ	-	ประมาณ	-	ประมาณ	-	Approximately
+
+กว่า	-	กว่า	-	More than, over	-	กว่า	-	กว่า	-	กว่า	-	กว่า	-	กว่า	-	กว่า	-	More than, over
+
+ชาว	-	ชาว	-	People of (nationality, ethnicity)	-	ชาว	-	ชาว	-	ชาว	-	ชาว	-	ชาว	-	ชาว	-	People of (nationality, ethnicity)
+
+ต่างประเทศ	-	ต่างประเทศ	-	Foreign, abroad	-	ต่างประเทศ	-	ต่างประเทศ	-	ต่างประเทศ	-	ต่างประเทศ	-	ต่างประเทศ	-	ต่างประเทศ	-	Foreign, abroad
+
+ถ้า	-	ถ้า	-	If	-	ถ้า	-	ถ้า	-	ถ้า	-	ถ้า	-	ถ้า	-	ถ้า	-	If
+
+รวมทั้ง	-	รวมทั้ง	-	Including	-	รวมทั้ง	-	รวมทั้ง	-	รวมทั้ง	-	รวมทั้ง	-	รวมทั้ง	-	รวมทั้ง	-	Including
+
+เจ้าหน้าที่	-	เจ้าหน้าที่	-	Official, staff	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	เจ้าหน้าที่	-	Official, staff
+
+อื่นๆ	-	อื่นๆ	-	Others	-	อื่นๆ	-	อื่นๆ	-	อื่นๆ	-	อื่นๆ	-	อื่นๆ	-	อื่นๆ	-	Others
+
+คง	-	คง	-	Probably, likely	-	คง	-	คง	-	คง	-	คง	-	คง	-	คง	-	Probably, likely
+
+อยาก	-	อยาก	-	Want, wish	-	อยาก	-	อยาก	-	อยาก	-	อยาก	-	อยาก	-	อยาก	-	Want, wish
+
+สถา	-	สถา	-	Institution, place (abbreviation)	-	สถา	-	สถา	-	สถา	-	สถา	-	สถา	-	สถา	-	Institution, place (abbreviation)
+
+สถานี	-	สถานี	-	Station	-	สถานี	-	สถานี	-	สถานี	-	สถานี	-	สถานี	-	สถานี	-	Station
+
+สถาบัน	-	สถาบัน	-	Institute	-	สถาบัน	-	สถาบัน	-	สถาบัน	-	สถาบัน	-	สถาบัน	-	สถาบัน	-	Institute
+
+การศึกษา	-	การศึกษา	-	Education	-	การศึกษา	-	การศึกษา	-	การศึกษา	-	การศึกษา	-	การศึกษา	-	การศึกษา	-	Education
+
+สถาบันการศึกษา	-	สถาบันการศึกษา	-	Educational institution	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	สถาบันการศึกษา	-	Educational institution
+
+อุดม	-	อุดม	-	Supreme, abundant	-	อุดม	-	อุดม	-	อุดม	-	อุดม	-	อุดม	-	อุดม	-	Supreme, abundant
+
+อุดมศึกษา	-	อุดมศึกษา	-	Higher education	-	อุดมศึกษา	-	อุดมศึกษา	-	อุดมศึกษา	-	อุดมศึกษา	-	อุดมศึกษา	-	อุดมศึกษา	-	Higher education
+
+สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	Higher education institution	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	สถาบันอุดมศึกษา	-	Higher education institution
+
+แห่ง	-	แห่ง	-	Place, location, classifier for institutions	-	แห่ง	-	แห่ง	-	แห่ง	-	แห่ง	-	แห่ง	-	แห่ง	-	Place, location, classifier for institutions
+
+แน่นอน	-	แน่นอน	-	Certainly, definitely	-	แน่นอน	-	แน่นอน	-	แน่นอน	-	แน่นอน	-	แน่นอน	-	แน่นอน	-	Certainly, definitely
+
+เท่าที่	-	เท่าที่	-	As much as, as far as	-	เท่าที่	-	เท่าที่	-	เท่าที่	-	เท่าที่	-	เท่าที่	-	เท่าที่	-	As much as, as far as
+
+ซี	-	ซี	-	C (Latin letter)	-	ซี	-	ซี	-	ซี	-	ซี	-	ซี	-	ซี	-	C (Latin letter)
+
+เช่นนั้น	-	เช่นนั้น	-	Like that, in such a way	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	Like that, in such a way
+
+เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	Only...also...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	เฉพาะ...ก็...	-	Only...also...
+
+ผู้	-	ผู้	-	Person, classifier for people	-	ผู้	-	ผู้	-	ผู้	-	ผู้	-	ผู้	-	ผู้	-	Person, classifier for people
+
+สมัคร	-	สมัคร	-	Apply, register	-	สมัคร	-	สมัคร	-	สมัคร	-	สมัคร	-	สมัคร	-	สมัคร	-	Apply, register
+
+สอบ	-	สอบ	-	Exam, test	-	สอบ	-	สอบ	-	สอบ	-	สอบ	-	สอบ	-	สอบ	-	Exam, test
+
+สอบเข้าได้	-	สอบเข้าได้	-	Pass an entrance exam	-	สอบเข้าได้	-	สอบเข้าได้	-	สอบเข้าได้	-	สอบเข้าได้	-	สอบเข้าได้	-	สอบเข้าได้	-	Pass an entrance exam
+
+สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	Apply for a university entrance exam	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	สมัครสอบเข้ามหาวิทยาลัย	-	Apply for a university entrance exam
+
+ชั้นบันได	-	ชั้นบันได	-	Staircase, stairs	-	ชั้นบันได	-	ชั้นบันได	-	ชั้นบันได	-	ชั้นบันได	-	ชั้นบันได	-	ชั้นบันได	-	Staircase, stairs
+
+ไฟล์	-	ไฟล์	-	File (digital or document)	-	ไฟล์	-	ไฟล์	-	ไฟล์	-	ไฟล์	-	ไฟล์	-	ไฟล์	-	File (digital or document)
+
+ล็อบบี้	-	ล็อบบี้	-	Lobby	-	ล็อบบี้	-	ล็อบบี้	-	ล็อบบี้	-	ล็อบบี้	-	ล็อบบี้	-	ล็อบบี้	-	Lobby
+
+พลัง	-	พลัง	-	Power, energy	-	พลัง	-	พลัง	-	พลัง	-	พลัง	-	พลัง	-	พลัง	-	Power, energy
+
+ข้อมูล	-	ข้อมูล	-	Information, data	-	ข้อมูล	-	ข้อมูล	-	ข้อมูล	-	ข้อมูล	-	ข้อมูล	-	ข้อมูล	-	Information, data
+
+ไว้ใจ	-	ไว้ใจ	-	Trust	-	ไว้ใจ	-	ไว้ใจ	-	ไว้ใจ	-	ไว้ใจ	-	ไว้ใจ	-	ไว้ใจ	-	Trust
+
+นาน	-	นาน	-	Long (time duration)	-	นาน	-	นาน	-	นาน	-	นาน	-	นาน	-	นาน	-	Long (time duration)
+
+นิด	-	นิด	-	A little, slightly	-	นิด	-	นิด	-	นิด	-	นิด	-	นิด	-	นิด	-	A little, slightly
+
+การเงิน	-	การเงิน	-	Finance	-	การเงิน	-	การเงิน	-	การเงิน	-	การเงิน	-	การเงิน	-	การเงิน	-	Finance
+
+การทหาร	-	การทหาร	-	Military affairs	-	การทหาร	-	การทหาร	-	การทหาร	-	การทหาร	-	การทหาร	-	การทหาร	-	Military affairs
+
+การต่างประเทศ	-	การต่างประเทศ	-	Foreign affairs	-	การต่างประเทศ	-	การต่างประเทศ	-	การต่างประเทศ	-	การต่างประเทศ	-	การต่างประเทศ	-	การต่างประเทศ	-	Foreign affairs
+
+ความลับ	-	ความลับ	-	Secret, confidentiality	-	ความลับ	-	ความลับ	-	ความลับ	-	ความลับ	-	ความลับ	-	ความลับ	-	Secret, confidentiality
+
+แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	Hamburger	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	แฮมเบอร์เกอร์	-	Hamburger<img width="1866" alt="image" src="https://github.com/user-attachments/assets/88c6671a-7684-4cb3-9fc2-02381b0e9838" />
+
+
