--- a/测试.md
+++ b/测试.md
@@ -1,107 +1,105 @@
-| ภาษาไทย          | ภาษาอังกฤษ                  |
-|-------------------|-----------------------------|
-| กิน              | eat                         |
-| ดื่ม             | drink                       |
-| มา               | come                        |
-| ไป               | go                          |
-| ยืน              | stand                       |
-| นั่ง              | sit                         |
-| ทำ               | do / make                   |
-| พูด              | speak                       |
-| ฟัง              | listen                      |
-| ดู               | look / watch / see          |
-| เดิน             | walk                        |
-| วิ่ง             | run                         |
-| กระโดด           | jump                        |
-| เข้า             | enter / go in               |
-| ออก              | exit / go out               |
-| นอน              | sleep                       |
-| อาบน้ำ           | take a shower / bathe       |
-| ทำงาน            | work                        |
-| เรียน            | study / learn               |
-| ซื้อ             | buy                         |
-| ขาย             | sell                        |
-| รัก              | love                        |
-| ให้              | give                        |
-| เอา              | take                        |
-| เปิด             | open                        |
-| ปิด              | close                       |
-| ล้าง             | wash                        |
-| หยุด             | stop                        |
-| ถือ              | hold                        |
-| โยน              | throw                       |
-| ขับ              | drive / operate             |
-| บิน              | fly                         |
-| ถาม              | ask                         |
-| ตอบ              | answer / reply              |
-| เขียน            | write                       |
-| อ่าน             | read                        |
-| แปล              | translate                   |
-| จำ               | remember                    |
-| คิด              | think                       |
-| ชอบ              | like                        |
-| เกลียด           | hate                        |
-| เสียใจ           | feel sad                    |
-| ดีใจ             | feel happy                  |
-| รอ               | wait                        |
-| หยิบ             | pick up / grab              |
-| ใส่              | wear / put on               |
-| หา               | search / look for           |
-| เจอ              | meet / find                 |
-| พา               | take / bring someone        |
-| รอคอย            | wait for                    |
-| ช่วย             | help                        |
-| เริ่ม             | start / begin               |
-| เลิก             | stop / quit / end           |
-| สอน              | teach                       |
-| ลืม              | forget                      |
-| แก้ไข            | revise / edit / fix         |
-| ประชุม           | hold a meeting              |
-| หวัง             | hope                        |
-| กลัว             | fear / be afraid of         |
-| โกรธ             | get angry                   |
-| ยิ้ม              | smile                       |
-| เลือก            | choose / select             |
-| หัวเราะ          | laugh                       |
-| ขึ้น             | rise                        |
-| ลง               | fall / descend              |
-| จอด              | stop / park (vehicle)       |
-| จอง              | reserve / book              |
-| พัก              | rest / stay                 |
-| เที่ยว            | travel / go out             |
-| เดินทาง          | travel                      |
-| หิว              | feel hungry                 |
-| อิ่ม              | feel full                   |
-| เจ็บ             | hurt                        |
-| หาย              | disappear / recover         |
-| ร้อน             | feel hot                    |
-| แช่แข็ง          | freeze                      |
-| อธิบาย           | explain                     |
-| แนะนำ            | introduce / recommend       |
-| บอก              | tell / say                  |
-| เรียก            | call                        |
-| คุย              | chat / talk                 |
-| เชิญ             | invite                      |
-| ขอโทษ           | apologize                   |
-| ขอบคุณ           | thank                       |
-| มอง              | look / stare                |
-| จับ              | grab / hold                 |
-| ดม               | smell                      |
-| ชิม              | taste                       |
-| กัด              | bite                        |
-| เลีย             | lick                        |
-| ตี               | hit                         |
-| เตะ              | kick                        |
-| หายใจ           | breathe                     |
-| ตื่น             | wake up                     |
-| หลับ             | sleep                       |
-| แต่งตัว         | get dressed                 |
-| เดิน             | walk                        |
-| เล่น             | play                        |
-| ล้างจาน         | wash the dishes             |
-| ซักผ้า           | do the laundry              |
-| สะอาด           | clean                       |
-| ทำความสะอาด     | do a thorough cleaning      |
-| เพศสัมพันธ์      | have sex                    |
-| เกิด             | be born                     |
-| ดับ              | die                         |
+| **泰语**                           | **英语**                              |
+|------------------------------------|--------------------------------------|
+| ตัวเลข                             | Number, digit                        |
+| วิธี                               | Method, way                          |
+| ดังนี้                             | As follows                           |
+| หน่วย                             | Unit                                 |
+| สิบ                                | Ten                                  |
+| ร้อย                               | Hundred                              |
+| พัน                                | Thousand                             |
+| หมื่น                              | Ten thousand                         |
+| แสน                               | Hundred thousand                     |
+| ล้าน                               | Million                              |
+| เอ็ด                               | One (used in 21, 31, etc.)          |
+| เศษส่วน                            | Fraction                             |
+| เศษส่วนทศนิยม                      | Decimal fraction                     |
+| ศูนย์                              | Zero                                 |
+| จุด                                | Point, dot, decimal point           |
+| ร้อยละ                             | Percentage                           |
+| ร้อยละห้า                          | Five percent (5%)                    |
+| ห้าร้อยละ                          | Five hundred percent (500%)         |
+| เปอร์เซ็นต์                        | Percent (%)                          |
+| คณะ                               | Faculty, department, committee      |
+| คณะกรรมการ                         | Committee                            |
+| คณะผู้แทน                          | Delegation, representatives         |
+| เอเชีย / เอเซีย                    | Asia                                 |
+| แอฟริกา                            | Africa                               |
+| กัมพูชา                            | Cambodia                             |
+| เวียดนาม                           | Vietnam                              |
+| มาเลเซีย                           | Malaysia                             |
+| อินโดนีเซีย / อินโดเนเซีย           | Indonesia                            |
+| ภาษาสิงหล                          | Sinhala language                     |
+| ภาษาสวาฮีลี                        | Swahili language                     |
+| ภาษาฮาวซา                          | Hausa language                       |
+| ตุรกี                              | Turkey                               |
+| รวม                                | Include, total                       |
+| ทั้ง                                | Both, entire                         |
+| ทั้งหมด                            | All, total                           |
+| เท่าไร                             | How much, how many                   |
+| แบ่ง                               | Divide                               |
+| แบ่งออกเป็น                        | Divided into                         |
+| วิทยาลัย                           | College                              |
+| อาหรับ                             | Arabic                               |
+| ยุโรป                              | Europe                               |
+| คณะภาษายุโรปตะวันออก               | Faculty of Eastern European Languages |
+| วิทยาลัยภาษาอังกฤษ                  | College of English Language          |
+| วิทยาลัยภาษารัสเซีย                 | College of Russian Language          |
+| วัฒนธรรม                           | Culture                              |
+| วัฒนธรรมจีน                        | Chinese culture                      |
+| วิทยาลัยภาษาและวัฒนธรรมจีน          | College of Chinese Language and Culture |
+| การค้า                             | Trade, commerce                      |
+| ระหว่าง                            | Between                              |
+| การค้าระหว่างประเทศ                | International trade                  |
+| วิทยาลัยการค้าระหว่างประเทศ        | College of International Trade       |
+| ชั้นสูง                             | Advanced, higher                     |
+| การแปล                             | Translation                          |
+| วิทยาลัยการแปลชั้นสูง              | College of Advanced Translation      |
+| วิทยาลัยออนไลน์                     | Online college                       |
+| ประมาณ                             | Approximately                        |
+| กว่า                               | More than, over                      |
+| ชาว                               | People of (nationality, ethnicity)   |
+| ต่างประเทศ                         | Foreign, abroad                      |
+| ถ้า                                | If                                   |
+| รวมทั้ง                             | Including                            |
+| เจ้าหน้าที่                         | Official, staff                      |
+| อื่นๆ                               | Others                               |
+| คง                                | Probably, likely                     |
+| อยาก                              | Want, wish                           |
+| สถา                               | Institution, place (abbreviation)    |
+| สถานี                             | Station                              |
+| สถาบัน                            | Institute                            |
+| การศึกษา                          | Education                            |
+| สถาบันการศึกษา                    | Educational institution              |
+| อุดม                              | Supreme, abundant                    |
+| อุดมศึกษา                         | Higher education                     |
+| สถาบันอุดมศึกษา                   | Higher education institution         |
+| แห่ง                              | Place, location, classifier for institutions |
+| แน่นอน                            | Certainly, definitely                |
+| เท่าที่                            | As much as, as far as                |
+| ซี                                | C (Latin letter)                     |
+| เช่นนั้น                           | Like that, in such a way             |
+| เฉพาะ...ก็...                      | Only...also...                       |
+| ผู้                                | Person, classifier for people        |
+| ผู้จัดการ                          | Manager                              |
+| สมัคร                              | Apply, register                      |
+| ใบสมัคร                            | Application form                     |
+| สอบ                               | Exam, test                           |
+| สอบข้อเขียน                        | Written exam                         |
+| สอบข้อฟัง                          | Listening exam                        |
+| สอบเข้าได้                          | Pass an entrance exam                |
+| สมัครสอบเข้ามหาวิทยาลัย            | Apply for a university entrance exam |
+| ขั้นบันได                          | Staircase, stairs                     |
+| ไฟล์                              | File (digital or document)           |
+| ล็อบบี้                            | Lobby                                |
+| พลัง                              | Power, energy                        |
+| ข้อมูล                             | Information, data                    |
+| ไว้ใจ                             | Trust                                |
+| นาน                               | Long (time duration)                 |
+| นาน ๆ                             | Occasionally, from time to time      |
+| นิด                               | A little, slightly                   |
+| นิดๆ หน่อยๆ                        | A little bit, slightly               |
+| การเงิน                            | Finance                              |
+| การทหาร                           | Military affairs                     |
+| การต่างประเทศ                      | Foreign affairs                      |
+| ความลับ                           | Secret, confidentiality              |
+| แฮมเบอร์เกอร์                      | Hamburger                            |
